@@ -13,6 +13,7 @@ Agregado emulación de Stack Light Rifle
 Agregado emulación de Defender Light Gun
 Agregada emulación de Trojan Light Pen
 Agregada emulación de Datel Lightwriter
+Agregada emulación de Spectrum Doodler Lightpen
 Agregada mirilla de lightgun
 
 Mejorado ZX Vision:
