@@ -93,3 +93,4 @@ if ( lightgun_emulation_enabled.v && lightgun_emulation_type==GUNSTICK_KEMPSTON 
     return get_kempston_value();
 }
 
+-posicion del electro en Inves tanto al ver el electron desde debug cpu como  con las pistolas opticas, es siempre mas abajo....
