@@ -13,6 +13,7 @@ Added emulation of Stack Light Rifle
 Added emulation of Defender Light Gun
 Added emulation of Trojan Light Pen
 Added emulation of Datel Lightwriter
+Added emulation of Spectrum Doodler Lightpen
 Added lightgun scope
 
 Improved ZX Vision:
